fixed alignment and font size for navbar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -20,7 +20,8 @@ body {
 .navbar {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: #4CAF50; /* Green background color */
     overflow: hidden;
     border-radius: 8px; /* Rounded corners */
@@ -44,7 +45,7 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 24px;
+    font-size: 18px;
     color: white;
 }
 /* Navbar */
